@@ -83,6 +83,7 @@ Hbase Change Log
    HBASE-672   Sort regions in the regionserver UI
    HBASE-677   Make HTable, HRegion, HRegionServer, HStore, and HColumnDescriptor
                subclassable (Clint Morgan via Stack)
+   HBASE-682   Regularize toString
 
   NEW FEATURES
    HBASE-47    Option to set TTL for columns in hbase
